# swissrenov3

./: mkdocs.yml  pyproject.toml
docs/: code.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: structure_general.md  structure_panoramic.md  structure_pointcloud.md  structures_classes.md
src/swissrenov3/: IO.py  __init__.py  geometry.py  o3d_tools.py  pointcloud.py  simple_tools.py  tools.py  utils.py  vecto.py
src/swissrenov3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/swissrenov3/services/: config.py  obj_to_gbxml.py  services.py  split_roof.py
swissrenov3/: IO.py  geometry.py  utils.py
tests/: test_unitaire.py
